Bug #19166 --> pull a 180 and reverse the ref counting model for url listeners. The manager now uses an nsIsupportsArray to keep references to all of the url listeners. However, in order to prevent circular references (which is why I was using a nsVoidArray before), when we issue the on stop call to a url listener, we automatically release our ref to that object. r=rhp